# dcu-in-action

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dtk2404.txt  requirements-dtk2504.txt  requirements-full.txt  requirements.txt  setup.py  test_config.yaml
common/: __init__.py
common/dcu/: __init__.py  device_manager.py  monitor_dcu_training.sh
common/devops/: dcu_monitor.sh
common/devops/dcu_env_check/: README.md  system_check.sh
common/devops/dcu_env_check/tools/: board_check.sh  driver_load_check.sh  pcie_speed_check.sh
common/docker/: Dockerfile  Dockerfile.py310  Makefile  docker-compose.yml  docker-entrypoint.sh
common/hpc/: __init__.py  numerical_solver.py
common/llm/: __init__.py  finetune_utils.py  inference_utils.py  training_utils.py
common/setup/: check_environment.sh  install_dependencies.sh  install_requirements.sh
common/utils/: __init__.py  config_manager.py  logger.py  monitor.py
configs/: test_config.json  test_config.yaml
configs/training/: default.yaml
docs/: 01-dcu-installation.md  01-environment-setup.md  02-llm-inference.md  03-llm-fine-tuning.md  04-llm-training.md  05-llm-for-science.md  DEPENDENCIES.md
docs/base/: 01-DCU：介绍、ROCm 软件栈、架构和资源工具.md  02-DAS：DCU 人工智能基础软件系统.md
docs/dcu/: DCU：01-安装快速上手步骤.md  DCU：02-人工智能基础软件系统.md
docs/devops/: ROCm 常用命令运维手册.md
docs/tutorials/: 01-DCU 环境及 ROCm 软件栈简介.md  03-DAS：DCU 人工智能基础软件系统.md
examples/basic/: hello_dcu.py  test_config_manager.py  test_dcu_manager.py
examples/benchmarks/: dcu_benchmark.py
examples/configs/: code_generation_config.yaml  customer_service_config.yaml  financial_qa_config.yaml
examples/datasets/: code_generation_sample.json  customer_service_sample.json  dataset_info.yaml
examples/fine-tuning/llm/llamafactory/doc/: LLaMA Factory：01-基本介绍.md  LLaMA Factory：02-基于DCU进行LoRA微调.md  LLaMA Factory：03-Easy Dataset 让大模型高效学习领域知识.md  LLaMA Factory：04-微调DeepSeek-R1-Distill-Qwen-7B模型实现新闻标题分类器.md
examples/finetuning/llamafactory/: README.md
examples/finetuning/llamafactory/doc/: LLaMA Factory：01-基本介绍.md  LLaMA Factory：02-基于DCU进行LoRA微调.md  LLaMA Factory：03-Easy Dataset 让大模型高效学习领域知识.md  LLaMA Factory：04-微调DeepSeek-R1-Distill-Qwen-7B模型实现新闻标题分类器.md  大模型微基础：01-从RAG到LLaMA-Factory的技术选择.md
examples/finetuning/llamafactory/scripts/: train_model.py
examples/llm-fine-tuning/: lora_finetune.py
examples/llm-fine-tuning/deepspeed/transrormer/: run_finetune.sh  train.py
examples/llm-fine-tuning/llamafactory/: QUICKSTART_DCU_K100_AI.md  README_DCU_K100_AI.md
examples/llm-fine-tuning/llamafactory/configs/: dcu_k100_ai_optimal.yaml  eval_power_domain.yaml  qwen3_32b_8dcu_lora.yaml  qwen3_32b_power_domain_8dcu.yaml
examples/llm-fine-tuning/llamafactory/doc/: LLaMA Factory 技术白皮书：从入门到生产环境部署全链路指南.md  LLaMA Factory：01-从环境配置到模型部署的完整流程.md  LLaMA Factory：02-基于DCU进行LoRA微调.LLaMA3md  LLaMA Factory：02-基于DCU进行LoRA微调.md  LLaMA Factory：02-基于DCU进行LoRA微调LLaMA3.md  LLaMA Factory：03-Easy Dataset 让大模型高效学习领域知识.md  llamafactory_part1_core_parameters.md  llamafactory_part2_advanced_practices.md  llamafactory_part2_completion.md
examples/llm-fine-tuning/llamafactory/scripts/: data_processor.py  dcu_k100_ai_setup.sh  deployment-guide.md  inference_server.py  install_llamafactory.sh  power_domain_inference.py  prepare_power_domain_dataset.py  quick_start.sh  quick_test_power_domain.sh  test_dcu_performance.py  train_power_domain.sh
examples/llm-inference/: README.md  chatglm_inference.py  run_complete_benchmark.sh  vllm_server.py
examples/llm-inference/benchmark/: benchmark_controller.py  performance_monitor.py
examples/llm-inference/benmark/: benchmark_test.py  generate_report.py  run_benchmarks.sh
examples/llm-inference/configs/: benchmark_config.yaml
examples/llm-inference/scripts/: check_dcu_status.sh  run_multi_gpu_benchmark.sh  run_single_gpu_benchmark.sh  setup_environment.sh
examples/llm-inference/vllm_benchmark/: BEGINNER_COMPREHENSIVE_GUIDE.md  BEGINNER_GUIDE.md  CODE_STRUCTURE_GUIDE.md  CONCURRENCY_GUIDE.md  PRACTICAL_EXAMPLES.md  README.md  SUMMARY.md  USAGE_EXAMPLES.md  aggregate_result.py  backend_request_func.py  benchmark_dataset.py  benchmark_serving.py  benchmark_utils.py  benchmark_visualizer.py  combos.yaml  example_usage.py  requirements.txt  run_sweep.py  test_visualizer.py  visualize.py
examples/llm-inference/vllm_benchmark_for_dcu/: README.md  代码结构与功能说明.md  大模型性能测试指南.md  海光DCU大模型性能测试指南.md
examples/llm-inference/vllm_benchmark_for_dcu/code/: BEGINNER_GUIDE.md  CODE_STRUCTURE.md  CONCURRENCY_TESTING_GUIDE.md  EXAMPLES_AND_BEST_PRACTICES.md  README.md  backend_request_func.py  benchmark_dataset.py  benchmark_serving.py  benchmark_utils.py  server.sh  test.sh
examples/llm-inference/xiference/: deploy_xinference_dcu.sh
examples/llm-training/: train_llama.py
scripts/: finetune.py  inference.py  train.py
scripts/setup/: quick_start.sh
scripts/utils/: monitor_performance.py
tests/: test_dcu_manager.py
